# xmltodjangomodel

./: .gitignore  .pylintrc  README.md  convert.py  pyproject.toml
templates/: abstract_reification.j2  models.py.j2  reification_property.j2  reificationscript.j2  relation.j2  relation2.j2
templates/properties/: _default_fields.j2  charfield.j2  choicefield.j2  floatfield.j2  integerfield.j2  textfield.j2
